  can be easily distinguished from environment variables
  (Xavier Leroy, review by Mark Shinwell and Damien Doligez)

- #9634: Allow initial and repeated commas in `OCAMLRUNPARAM`.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

### Code generation and optimizations:

- #9441: Add RISC-V RV64G native-code backend.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Gabriel Scherer)

### Standard library:

* #9554: add primitive __FUNCTION__ that returns the name of the current method
  or function, including any enclosing module or class.
  (Nicolás Ojeda Bär, Stephen Dolan, review by Stephen Dolan)

- #9075: define to_rev_seq in Set and Map modules.
  (Sébastien Briais, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #9561: Unbox Unix.gettimeofday and Unix.time
  (Stephen Dolan, review by David Allsopp)

- #9570: Provide an Atomic module with a trivial purely-sequential
  implementation, to help write code that is compatible with Multicore
  OCaml.
  (Gabriel Scherer, review by Xavier Leroy)

- #9571: Make at_exit and Printexc.register_printer thread-safe.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and Xavier Leroy)

### Other libraries:

* #9206, #9419: update documentation of the threads library;
  deprecate Thread.kill, Thread.wait_read, Thread.wait_write,
  and the whole ThreadUnix module.
  (Xavier Leroy, review by Florian Angeletti, Guillaume Munch-Maccagnoni,
   and Gabriel Scherer)

- #9573: reimplement Unix.create_process and related functions without
  Unix.fork, for better efficiency and compatibility with threads.
  (Xavier Leroy, review by Gabriel Scherer and Anil Madhavapeddy)

- #9575: Add Unix.is_inet6_addr
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #9593: Use new flag for non-elevated symbolic links and test for Developer
  Mode on Windows
  (Manuel Hornung, review by David Allsopp and Nicolás Ojeda Bär)

* #9601: Return EPERM for EUNKNOWN -1314 in win32unix (principally affects