@@ -30,7 +30,8 @@ exception Error of Location.t * error
 let lfunction params body =
   if params = [] then body else
   match body with
-  | Lfunction {kind = Curried; params = params'; body = body'; attr; loc} ->
+  | Lfunction {kind = Curried; params = params'; body = body'; attr; loc}
+    when List.length params + List.length params' <= Lambda.max_arity() ->
       Lfunction {kind = Curried; params = params @ params';
                  return = Pgenval;
                  body = body'; attr;
